==> ldumaguing/Programming/Pico/12 - ili9341 parallel/ili9341/ili9341.c <==
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include "pico/stdlib.h"
#include "ili9341/ili9341.h"

ili9341_config_t ili9341_config = {
	.port = spi0,
	.pin_miso = 16,
	.pin_cs = 0,
	.pin_sck = 18,
	.pin_mosi = 19,
	.pin_reset = 12,
	.pin_dc = 1,
	.pin_rd = 3,
	.pin_wr = 2,
	.pin_d0 = 4,
	.pin_d1 = 5,
	.pin_d2 = 6,
	.pin_d3 = 7,
	.pin_d4 = 8,
	.pin_d5 = 9,
	.pin_d6 = 10,
	.pin_d7 = 11
};

static inline void pen_down();
static inline void pen_up();

int sio_write(const uint8_t *src, size_t len) {
	do {
		gpio_put(ili9341_config.pin_d0, (*src & 1) ? 1:0);
		gpio_put(ili9341_config.pin_d1, (*src & 2) ? 1:0);
		gpio_put(ili9341_config.pin_d2, (*src & 4) ? 1:0);
		gpio_put(ili9341_config.pin_d3, (*src & 8) ? 1:0);
		gpio_put(ili9341_config.pin_d4, (*src & 16) ? 1:0);
		gpio_put(ili9341_config.pin_d5, (*src & 32) ? 1:0);
		gpio_put(ili9341_config.pin_d6, (*src & 64) ? 1:0);
		gpio_put(ili9341_config.pin_d7, (*src & 128) ? 1:0);

		pen_down();
		pen_up();

		len--;
		src++;
	} while (len > 0);
	
	return 0;
}

void init_pins() {
    // Chip select is active-low, so we'll initialise it to a driven-high state
    gpio_init(ili9341_config.pin_cs);
    gpio_set_dir(ili9341_config.pin_cs, GPIO_OUT);
    gpio_put(ili9341_config.pin_cs, 0);

    // Reset is active-low
    gpio_init(ili9341_config.pin_reset);
    gpio_set_dir(ili9341_config.pin_reset, GPIO_OUT);
    gpio_put(ili9341_config.pin_reset, 1);

    // high = command, low = data
    gpio_init(ili9341_config.pin_dc);
    gpio_set_dir(ili9341_config.pin_dc, GPIO_OUT);
    gpio_put(ili9341_config.pin_dc, 0);

	// rd
    gpio_init(ili9341_config.pin_rd);
    gpio_set_dir(ili9341_config.pin_rd, GPIO_OUT);
    gpio_put(ili9341_config.pin_rd, 1);

	// wr
    gpio_init(ili9341_config.pin_wr);
    gpio_set_dir(ili9341_config.pin_wr, GPIO_OUT);
    gpio_put(ili9341_config.pin_wr, 1);

	// d0
    gpio_init(ili9341_config.pin_d0);
    gpio_set_dir(ili9341_config.pin_d0, GPIO_OUT);
    gpio_put(ili9341_config.pin_d0, 1);

	// d1
    gpio_init(ili9341_config.pin_d1);
    gpio_set_dir(ili9341_config.pin_d1, GPIO_OUT);
    gpio_put(ili9341_config.pin_d1, 1);

	// d2
    gpio_init(ili9341_config.pin_d2);
    gpio_set_dir(ili9341_config.pin_d2, GPIO_OUT);
    gpio_put(ili9341_config.pin_d2, 1);

	// d3
    gpio_init(ili9341_config.pin_d3);
    gpio_set_dir(ili9341_config.pin_d3, GPIO_OUT);
    gpio_put(ili9341_config.pin_d3, 1);

	// d4
    gpio_init(ili9341_config.pin_d4);
    gpio_set_dir(ili9341_config.pin_d4, GPIO_OUT);
    gpio_put(ili9341_config.pin_d4, 1);

	// d5
    gpio_init(ili9341_config.pin_d5);
    gpio_set_dir(ili9341_config.pin_d5, GPIO_OUT);
    gpio_put(ili9341_config.pin_d5, 1);

	// d6
    gpio_init(ili9341_config.pin_d6);
    gpio_set_dir(ili9341_config.pin_d6, GPIO_OUT);
    gpio_put(ili9341_config.pin_d6, 1);

	// d7
    gpio_init(ili9341_config.pin_d7);
    gpio_set_dir(ili9341_config.pin_d7, GPIO_OUT);
    gpio_put(ili9341_config.pin_d7, 1);
}

static inline void cs_select() {
    asm volatile("nop \n nop \n nop");
    gpio_put(ili9341_config.pin_cs, 0);  // Active low
    asm volatile("nop \n nop \n nop");
}

static inline void cs_deselect() {
    asm volatile("nop \n nop \n nop");
    gpio_put(ili9341_config.pin_cs, 1);
    asm volatile("nop \n nop \n nop");
}

static inline void pen_down() {
    asm volatile("nop \n nop \n nop");
    gpio_put(ili9341_config.pin_wr, 0);  // writing
    asm volatile("nop \n nop \n nop");
}

static inline void pen_up() {
    asm volatile("nop \n nop \n nop");
    gpio_put(ili9341_config.pin_wr, 1);  // not writing
    asm volatile("nop \n nop \n nop");
}

static inline void go_read() {
    asm volatile("nop \n nop \n nop");
    gpio_put(ili9341_config.pin_rd, 0);  // reading
    asm volatile("nop \n nop \n nop");
}

static inline void stop_read() {
    asm volatile("nop \n nop \n nop");
    gpio_put(ili9341_config.pin_rd, 1);  // stop reading
    asm volatile("nop \n nop \n nop");
}

void ili9341_set_command(uint8_t cmd) {
    cs_select();
    gpio_put(ili9341_config.pin_dc, 0);
    sio_write(&cmd, 1);
    gpio_put(ili9341_config.pin_dc, 1);
    cs_deselect();
}

void ili9341_command_param(uint8_t data) {
    cs_select();
    sio_write(&data, 1);
    cs_deselect();
}

void ili9341_write_data(void *buffer, int bytes) {
	// printf("buf: %x\n", buffer);
    cs_select();
    sio_write(buffer, bytes);
    cs_deselect();
}

void ili9341_init() {
	init_pins();

    sleep_ms(5000);
    printf("start...\n");
    gpio_put(ili9341_config.pin_reset, 0);
    sleep_ms(10);
    gpio_put(ili9341_config.pin_reset, 1);

    ili9341_set_command(0x01);//soft reset
    sleep_ms(100);

    ili9341_set_command(ILI9341_GAMMASET);
    ili9341_command_param(0x01);

    // positive gamma correction
    ili9341_set_command(ILI9341_GMCTRP1);
    ili9341_write_data((uint8_t[15]){ 0x0f, 0x31, 0x2b, 0x0c, 0x0e, 0x08, 0x4e, 0xf1, 0x37, 0x07, 0x10, 0x03, 0x0e, 0x09, 0x00 }, 15);

    // negative gamma correction
    ili9341_set_command(ILI9341_GMCTRN1);
    ili9341_write_data((uint8_t[15]){ 0x00, 0x0e, 0x14, 0x03, 0x11, 0x07, 0x31, 0xc1, 0x48, 0x08, 0x0f, 0x0c, 0x31, 0x36, 0x0f }, 15);

    // memory access control
    ili9341_set_command(ILI9341_MADCTL);
    ili9341_command_param(0x48);

    // pixel format
    ili9341_set_command(ILI9341_PIXFMT);
    ili9341_command_param(0x55);  // 16-bit

    // frame rate; default, 70 Hz
    ili9341_set_command(ILI9341_FRMCTR1);
    ili9341_command_param(0x00);
    ili9341_command_param(0x1B);

    // exit sleep
    ili9341_set_command(ILI9341_SLPOUT);

    // display on
    ili9341_set_command(ILI9341_DISPON);

    // column address set
    ili9341_set_command(ILI9341_CASET);
    ili9341_command_param(0x00);
    ili9341_command_param(0x00);  // start column
    ili9341_command_param(0x00);
    ili9341_command_param(0xef);  // end column -> 239

    // page address set
    ili9341_set_command(ILI9341_PASET);
    ili9341_command_param(0x00);
    ili9341_command_param(0x00);  // start page
    ili9341_command_param(0x01);
    ili9341_command_param(0x3f);  // end page -> 319

    ili9341_set_command(ILI9341_RAMWR);


}

uint16_t swap_bytes(uint16_t color) {
    return (color>>8) | (color<<8);
}
